--- a/index.html
+++ b/index.html
@@ -4,12 +4,10 @@
 <head>
   <meta charset="utf-8">
   <title> EZ-PZ DIY </title>
+  
   <style>
 body {
-    background-color: PaleGoldenRod ; 
-}
-p.italic {
-    font-style: italic;
+    background-image: url("there.jpg");
 }
 p.sansserif {
     font-family: Arial, Helvetica, sans-serif;
@@ -39,52 +37,50 @@ h3 {
 	margin-right: 150px;
     margin-left: 150px;
 }
-p { 
-	text-align:center; 
-}
-  </style>
+</style>
 </head>
   
 <body> 
 
-  <h1> <center> <p class="serif"> EZ-PZ DIY </p> </center> </h1> </center>
+  <h1>  <center> <p class="serif"> EZ-PZ DIY </p> </center> </h1> </center>
   <h3> <center> <p class="sansserif"> Clever Ideas, Easy DIY Projects </p> </center> </h3>
+    <center> <img src="oy.jpg" width="850" height="600" vspace="50">
 	
-    <center> <h2> <p class="serif"> Shoebox Cable Management </p> </h2>
-	<h3> <p class="sansserif"> With so many electronic accessories about in any one household, keeping all those chargers can be a mess. Repurpose a shoebox by cutting holes in the side and fitting metal eyelets around the holes. And there you go: instant cable management. </h3>
-	<img src="http://www.socreativethings.com/reusing-shoes-box-to-organize-your-home/" width="600" height="600" vspace="10">
+    <h2> <p class="serif"> River Stone Door Mat </p> </h2>
+	<h3> <p class="sansserif"> Buy yourself a plain door mat with no decoration. Make sure it has holes to let water drain through. Gather a bunch of river stones (wash them before use) and use silicone to attach them to the door mat. Let that dry and you’ll now have a surprisingly good-feeling door mat underneath your feet. </h3>
+	<img src="he.jpg" width="700" height="850" vspace="10">
 
     <h2> <p class="serif"> Paper Plate Gift Basket </p> </h2>
 	<h3> <p class="sansserif"> This simple and easily made paper plate basket is perfect for family occasions such as weddings. All you will need is a pair of scissors, a paper plate, a decorative ribbon and scotch tape. Follow the instructions below and wow your friends. </h3>
-	<img src="http://www.diyandcraftsideas.org/how-to-make-a-cookie-basket-from-a-paper-plate/" width="600" height="800" vspace="10">
-	
-	<h2> <p class="serif"> Origami Gift Box </p> </h2>
-	<h3> <p class="sansserif"> A simple yet fantastic and unique way to give gifts. This origami gift box even has room for a little message to be slipped inside. </h3>
-	<img src="http://www.vitaminihandmade.com/2014/06/diy-origami-gift-box.html" width="500" height="1500" vspace="10">
+	<img src="ot.jpg" width="700" height="1100" vspace="10">
 	
 	<h2> <p class="serif"> Decorative Lace Lampshade </p> </h2>
 	<h3> <p class="sansserif"> An old trick, but it still works wonders. Blow up a balloon, apply some wallpaper glue to some lace and stick it around the balloon. Once that is done, leave it to dry. Pop the balloon when it’s dry for an elegant-looking lampshade. </h3>
-	<img src="http://www.weddingsbylilly.com/2012-wedding-trends/burlap-and-lace-wedding-ideas/3/" width="600" height="800" vspace="10">
+	<img src="op.jpg" width="700" height="1100" vspace="10">
 	
-	<h2> <p class="serif"> River Stone Door Mat </p> </h2>
-	<h3> <p class="sansserif"> Buy yourself a plain door mat with no decoration. Make sure it has holes to let water drain through. Gather a bunch of river stones (wash them before use) and use silicone to attach them to the door mat. Let that dry and you’ll now have a surprisingly good-feeling door mat underneath your feet. </h3>
-	<img src="http://www.homedit.com/how-to-use-river-stones-in-diy-projects/#more-195139" width="600" height="800" vspace="10">
+	<h2> <p class="serif"> Unique Plant Hangers </p> </h2>
+	<h3> <p class="sansserif"> Simply drill a hole in an old table spoon, bend the spoon to give it the desired curve and nail the spoon to a wall. Using a thick, long spoon will yield better results. If you are unable to bend the spoon, soften it by using a propane torch on it. </h3>
+	<img src="hi.jpg" width="600" height="1500" vspace="10">
 	
 	<h2> <p class="serif"> Hanging Book Shelf </p> </h2>
 	<h3> <p class="sansserif"> Drill three holes in a slab of wood, thread some rope through and tie a knot at each end. Hang the suspended slab of wood via a hook screwed into a ceiling beam and you’ve got yourself a beautiful alternative to a table. </h3>
-	<img src="https://www.google.com.ph/url?sa=i&rct=j&q=&esrc=s&source=images&cd=&cad=rja&uact=8&ved=0ahUKEwjm7Keb5qHTAhXMKZQKHWIlAhQQjRwIBw&url=https%3A%2F%2Fwww.forrent.com%2Fblog%2Fdiy%2Fdiy-weekend-project-chic-hanging-bookshelf%2F&psig=AFQjCNFDbXOimYkGeFbdkeeimoV2GB7pyA&ust=1492185448225217" width="600" height="800" vspace="10">
+	<img src="oe.jpg" width="650" height="900" vspace="10">
 	
 	<h2> <p class="serif"> DIY Dyed Shoes </p> </h2>
 	<h3> <p class="sansserif"> I can’t emphasise enough the importance of the Vaseline with this DIY project. The Vaseline will keep the dye off the rim of your shoes, so it only dyes the fabric. Apply the dye and smudge away. </h3>
-	<img src="http://www.diyselfies.com/1298/dip-dyed-shoes-white-canvas-shoes-and-fabric-dye/" width="400" height="1500" vspace="10">
+	<img src="of.jpg" width="500" height="1700" vspace="10">
 	
 	<h2> <p class="serif"> Bottle Cap Magnets </p> </h2>
 	<h3> <p class="sansserif"> Collect your favourite bottle caps and repurpose them into fun fridge magnets. Simply apply hot glue to a magnet then stick that onto the inside of a bottle cap. </h3>
-	<img src="http://www.bhg.com/crafts/easy/1-hour-projects/recycled-material-crafts/?socsrc=bhgpin012913BottleCapMagnets&page=6" width="600" height="700" vspace="10">
+	<img src="og.jpg" width="700" height="900" vspace="10">
+	
+	<h2> <p class="serif"> Creative DIY Lantern </p> </h2>
+	<h3> <p class="sansserif"> Make use of all those beer and soda cans you throw away by creating a homemade lantern. Use masking tape at the top and bottom for guidance on where to cut. Slice down the can leaving three centimeters between each slice. Squish down slightly and insert a candle. For extra decoration, spray paint the lantern. </h3>
+	<img src="on.jpg" width="700" height="1000" vspace="10">
 	
 	<h2> <p class="serif"> Wired Picture Frame </p> </h2>
 	<h3> <p class="sansserif"> No need to throw away old picture frames. Repurpose them by taking off the back, adding wire or string across the entire frame and pegging your favourite pictures. </h3>
-	<img src="http://www.survivingcollege.com/3-easy-diys-spice-dorm/" width="600" height="900" vspace="10"> </center>
+	<img src="ov.jpg" width="700" height="1000" vspace="10">
 	
   </body>
 </html>
